--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,8 +47,9 @@
                                 <img th:src="${loginUser.headerUrl}" class="rounded-circle" style="width:30px;"/>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item text-center" th:href="@{|/user/profile/${loginUser.id}|}">个人主页</a>
-                                <a class="dropdown-item text-center" th:href="@{user/setting}">账号设置</a>
+                                <a class="dropdown-item text-center"
+                                   th:href="@{|/user/profile/${loginUser.id}|}">个人主页</a>
+                                <a class="dropdown-item text-center" th:href="@{/user/setting}">账号设置</a>
                                 <a class="dropdown-item text-center" th:href="@{/logout}">退出登录</a>
                                 <div class="dropdown-divider"></div>
                                 <span class="dropdown-item text-center text-secondary"
@@ -171,7 +172,7 @@
 
                     <li th:class="|page-item ${i==page.current?'active':''}|"
                         th:each="i:${#numbers.sequence(page.from,page.to)}">
-                        <a class="page-link" href="#" th:text="${i}">1</a>
+                        <a class="page-link" th:href="@{${page.path} (current=${i})}" th:text="${i}">1</a>
                     </li>
 
                     <li th:class="|page-item ${page.current==page.total?'disabled':''}|">
